# velox

./: .gitignore  CMakeLists.txt  SetupUbuntu18.md  vcpkg.json
.pipelines/: OneBranch.Buddy.yml  Velox-Buddy-Mariner.yml
CMake/: Findliburing.cmake
Testing/20241107-2349/: Test.xml
docs/: External_Row_Storage_Optimizations_Analysis.md  HashStringAllocator_BumpMode_Design.md  HashStringAllocator_BumpMode_Implementation_Guide.md  HashStringAllocator_Optimization_Analysis.md  RowContainer_Design_Analysis.md  RowContainer_Performance_Optimization_Analysis.md  RowGroup_Partitioning_Analysis.md  VectorHasher_Optimization_Design.md
scripts/: check-code-formatting.sh  setup-adapters.sh  setup-centos9.sh  setup-fedora.sh  setup-helper-functions.sh  setup-mariner.sh  setup-ubuntu-gluten.sh  setup-ubuntu.sh
velox/buffer/: Buffer.h
velox/common/base/: AsyncSource.cpp  AsyncSource.h  BitUtil.h  BloomFilter.h  CMakeLists.txt  PrefixSortConfig.h  SpillConfig.cpp  SpillConfig.h
velox/common/base/tests/: AsyncSourceTest.cpp  BloomFilterTest.cpp
velox/common/encode/: Base64.cpp  Base64.h
velox/common/encode/tests/: Base64Test.cpp
velox/common/file/: AsyncLocalFile.cpp  AsyncLocalFile.h  CMakeLists.txt  File.h  FileInputStream.cpp  FileInputStream.h  FileSystems.cpp  FileSystems.h
velox/common/file/tests/: AsyncLocalFileTest.cpp  CMakeLists.txt  FileTest.cpp
velox/common/memory/: HashStringAllocator.cpp  HashStringAllocator.h  MemoryArbitrator.h
velox/common/memory/tests/: HashStringAllocatorTest.cpp  MemoryArbitratorTest.cpp  MemoryManagerTest.cpp  (+1 more)
velox/connectors/hive/: HiveConfig.cpp  HiveConfig.h  HiveConnectorSplit.h  HiveConnectorUtil.cpp  HiveDataSource.cpp  SplitReader.cpp
velox/connectors/hive/storage_adapters/abfs/: AbfsFileSystem.cpp  AbfsFileSystem.h  AbfsReadFile.h  AbfsUtil.h  AbfsUtils.cpp  BlobClientProvider.h  BlobClientProviderFactory.cpp  BlobClientProviderFactory.h  CMakeLists.txt  ConnectionStringBlobClientProvider.cpp  ConnectionStringBlobClientProvider.h  SASBlobClientProvider.cpp  SASBlobClientProvider.h  VegasReadFile.cpp  VegasReadFile.h
velox/connectors/hive/storage_adapters/abfs/tests/: AbfsFileSystemTest.cpp  AbfsUtilTest.cpp  AzuriteServer.h  BlobClientProviderTest.cpp  CMakeLists.txt  VegasFileSystemTest.cpp
velox/connectors/hive/storage_adapters/abfs/vegas/: VegasExecBase.cpp  VegasExecBase.h  VegasJournalBase.cpp  VegasJournalBase.h  VegasSempahore.h
velox/connectors/hive/storage_adapters/abfs/vegas/client/: SysUtils.cpp  SysUtils.h  VegasCacheClient.cpp  VegasCacheClient.h  VegasCacheConfig.cpp  VegasCacheConfig.h  VegasMessageQueue.cpp  VegasMessageQueue.h  VegasUxSocket.cpp  VegasUxSocket.h
velox/connectors/hive/storage_adapters/abfs/vegas/v1/: VegasExecV1.cpp  VegasExecV1.h  VegasJournalV1.cpp  VegasJournalV1.h
velox/core/: PlanNode.cpp  PlanNode.h  QueryConfig.h
velox/core/tests/: PlanFragmentTest.cpp
velox/docs/: configs.rst
velox/dwio/common/: AsyncChunkedReader.cpp  AsyncChunkedReader.h  BufferedInput.cpp  BufferedInput.h  CMakeLists.txt  CacheInputStream.cpp  DirectBufferedInput.cpp  InputStream.cpp  InputStream.h  MetadataFilter.cpp  Options.h  PrefetchBufferedInput.cpp  PrefetchBufferedInput.h  SelectiveColumnReader.cpp  SelectiveStructColumnReader.h  StreamIdentifier.h  TimestampDecoder.h  TypeWithId.cpp
velox/exec/: Aggregate.h  AggregateWindow.cpp  CMakeLists.txt  Driver.cpp  Driver.h  GroupingSet.cpp  GroupingSet.h  HashAggregation.cpp  HashAggregation.h  HashBuild.cpp  HashBuild.h  HashProbe.cpp  HashProbe.h  HashTable.cpp  HashTable.h  LocalPlanner.cpp  Merge.cpp  MergeJoin.cpp  MergeJoin.h  MergeSource.cpp  MergeSource.h  PartitionStreamingWindowBuild.cpp  PartitionStreamingWindowBuild.h  PrefixSort.cpp  PrefixSort.h  RollUpHashAggregate.cpp  RollUpHashAggregate.h  RowContainer.cpp  RowContainer.h  RowContainerSpillSerde.cpp  RowContainerSpillSerde.h  RowFormatInfo.h  RowNumber.cpp  RowsStreamingWindowBuild.h  SharedArbitrator.cpp  SharedArbitrator.h  SortBuffer.cpp  SortWindowBuild.cpp  Spill.cpp  Spill.h  (+31 more)
velox/exec/art/: art.c  art.h
velox/exec/benchmarks/: BumpAllocatorBenchmark.cpp  CMakeLists.txt  HashJoinGroupProbeBenchmark.cpp  HashJoinListResultBenchmark.cpp  HashTableGroupProbeBenchmark.cpp  PrefixSortBenchmark.cpp  RowContainerStoreBenchmark.cpp  SpatialJoinBenchmark.cpp  VectorHasherBenchmark.cpp
velox/exec/fuzzer/: AggregationFuzzer.cpp  AggregationFuzzerBase.cpp  JoinFuzzer.cpp  SpatialJoinFuzzer.cpp  WindowFuzzer.cpp
velox/exec/prefixsort/: PrefixSortEncoder.h
velox/exec/tests/: AggregationTest.cpp  CMakeLists.txt  ConcatFilesSpillMergeStreamTest.cpp  HashJoinBridgeTest.cpp  HashJoinTest.cpp  HashTableTest.cpp  LocalPartitionTest.cpp  MergeJoinTest.cpp  MergerTest.cpp  OutputBufferManagerTest.cpp  PrefixSortTest.cpp  PrintPlanWithStatsTest.cpp  RollUpAggregationTest.cpp  RowContainerPerfTest.cpp  RowContainerSpillSerdeTest.cpp  RowContainerTest.cpp  SharedArbitratorTest.cpp  SortBufferTest.cpp  SpillTest.cpp  SpillableVectorBasedWindowPartitionTest.cpp  SpillableWindowPartitionTest.cpp  SpillerTest.cpp  TableScanTest.cpp  TableWriteTest.cpp  TaskTest.cpp  VectorBasedStreamingWindowTest.cpp  WindowSpillTest.cpp  WindowTest.cpp
velox/expression/: CastExpr-inl.h  CastExpr.cpp  CastExpr.h  SimpleFunctionAdapter.h
velox/expression/fuzzer/: SparkExpressionFuzzerTest.cpp
velox/expression/tests/: CastExprTest.cpp  ExprTest.cpp
velox/flag_definitions/: flags.cpp
velox/functions/lib/: SIMDComparisonUtil.h
velox/functions/prestosql/: CMakeLists.txt  Comparisons.cpp
velox/functions/sparksql/: CMakeLists.txt  MightContain.cpp  Register.cpp  String.h
velox/parse/: QueryPlanner.cpp
velox/serializers/: SerializedPageFile.cpp  SerializedPageFile.h
velox/substrait/: SubstraitToVeloxPlan.cpp
velox/substrait/tests/: Substrait2VeloxPlanConversionTest.cpp
velox/type/: DecimalUtil.h  Timestamp.h  TimestampConversion.h
velox/vector/: BaseVector.h  FlatVector.cpp  FlatVector.h  SelectivityVector.h
velox/vector/tests/: SelectivityVectorTest.cpp  VectorSaverTest.cpp  VectorTest.cpp
(+85 files in other folders)
